--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "gulp-jade": "^1.1.0",
     "gulp-less": "^3.1.0",
     "gulp-uglify": "^1.5.3"
+  },
+  "devDependencies": {
+    "gulp-minify": "0.0.11",
+    "gulp-minify-css": "^1.2.4"
   }
 }
