--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "gulp-coffee": "^2.3.2",
     "gulp-jade": "^1.1.0",
     "gulp-less": "^3.1.0",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "jade": "^1.11.0"
   },
   "devDependencies": {
     "gulp-minify": "0.0.11",
